@@ -38,6 +38,9 @@
    (LP: #948461) [Ben Howard]
  - warn on non-multipart, non-handled user-data [Martin Packman]
  - run resizefs in the background in order to not block boot (LP: #961226)
+ - Fix bug in Chef support where validation_key was present in config, but
+   'validation_cert' was not (LP: #960547)
+
 0.6.2:
  - fix bug where update was not done unless update was explicitly set.
    It would not be run if 'upgrade' or packages were set to be installed
